// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default HomeScreen renders in dark mode 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "System",
        "fontSize": 12,
      }
    }
  >
    Home Screen
  </Text>
</View>
`;

exports[`Default HomeScreen renders in light mode 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontFamily": "System",
        "fontSize": 12,
      }
    }
  >
    Home Screen
  </Text>
</View>
`;
